[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logminer-qa"
version = "0.1.0"
description = "Privacy-first log analysis and automated test generation for banking and enterprise workloads"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "LogMiner-QA Contributors"}
]
keywords = ["log-analysis", "pii-detection", "test-generation", "privacy", "banking"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Testing",
    "Topic :: Security",
]

dependencies = [
    "requests>=2.32.0",
    "scikit-learn>=1.5.0",
    "sentence-transformers>=3.0.0",
    "tensorflow-cpu>=2.17.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "tqdm>=4.66.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
logminer_qa = ["py.typed"]
